src/objects/MX_WF_Afiliaciones__c.object
<CustomObject>
    <description>Objeto para las afiliaciones que se informan en WALLET</description>
    <fields>
        <fullName>MX_WF_FIC__c</fullName>
        <description>Campo fórmula que trae el FIC de la campaña hacia el registro de afiliación</description>
        <formula>MX_WF_Wallet__r.MX_WF_Campania__r.CRM_WF_FIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Nombre_de_la_Campa_a__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nombre de la Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Afiliaciones</relationshipLabel>
        <relationshipName>Afiliaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WF_Wallet__c</fullName>
        <description>Campo para la aplicación WF, permite relacionar las afiliaciones con el registro de Wallet</description>
        <label>Wallet</label>
        <referenceTo>MX_WF_Wallet__c</referenceTo>
        <relationshipLabel>Afiliaciones</relationshipLabel>
        <relationshipName>Afiliaciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Afiliaciones</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de Afiliación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Afiliaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>